--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap"
+			rel="stylesheet"
+		/>
 
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
